[package]
name = "eq"
version = "0.3.0"
authors = ["Chris Koehnke <chris@koehnke.xyz>"]
description = "A simple command line interface for Elasticsearch queries."
edition = "2018"

[dependencies]
elasticsearch = "7.7.1-alpha.1"
serde_json = "~1"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"

[badges]
maintenance = { status = "experimental" }

# a few tweaks for reducing the binary size from
# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
